FIX: closing button not visible on chat index page (#1279)
* FIX: closing button not  visible on chat index page

--- a/assets/stylesheets/common/chat-channel-title.scss
+++ b/assets/stylesheets/common/chat-channel-title.scss
@@ -1,6 +1,12 @@
 .chat-channel-title {
   display: flex;
   align-items: center;
+  max-width: 96%;
+
+  .chat-channel-row:hover & {
+    overflow: hidden;
+    max-width: unset;
+  }
 
   .category-chat-private .d-icon {
     background-color: var(--secondary);
